Make some ux/ui changes
 - remove twitter bootstrap rails gem and use bootstrap sass gem
 - add autoprefixer rails gem
 - remove vendor files not being used
 - add background image

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>About Us</h1>
-<p>Our Vision is to improve people's productivity</p>
+<h1 class="uppercase white text-center">About Us</h1>
+<p class="white text-center">Our Vision is to improve people's productivity</p>
