--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,10 +1,12 @@
-<p>
+<p id="notice"><%= notice %></p>
+
+<p class="white">
   <strong>Content:</strong>
   <%= @task.content %>
 </p>
 
-<p>
-  <strong>State</strong>
+<p class="white">
+  <strong>State:</strong>
   <%= @task.state %>
 </p>
 
